--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,11 @@ line-ending = "auto"
 docstring-code-format = true
 docstring-code-line-length = "dynamic"
 
+[tool.uv.workspace]
+members = [
+    "src",
+]
+
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402"]
 "**/{tests,docs,tools}/*" = ["E402"]
